[package]
name = "totp-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self-storage = { git = "https://github.com/aiguy110/self-storage", branch = "master" }

clap = { version = "3.1.12", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.9"
totp-rs = { version = "3.0.1", features = ["otpauth", "serde_support"] }
cli-clipboard = "*"
