[package]
name = "totp-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self-storage = { git = "https://github.com/aiguy110/self-storage", branch = "master" }
clap = { version = "3.1.12", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.9"
#totp-rs = { version = "3.0.1", features = ["otpauth", "serde_support"] }
totp-rs = { git = "https://github.com/aiguy110/totp-rs", features = ["otpauth", "serde_support", "no_secret_length_req"] }
cli-clipboard = "*"
#bardecoder = { version = "0.4.0", features = ["debug-images"] }
bardecoder = "0.4.0"
image = "0.23"
anyhow = "*"
prost = "0.11.5"
base64 = "0.20.0"
urlencoding = "2.1.2"

[build-dependencies]
prost-build = "0.11.5"
